      to main(). (CNY-2786)

  o Build Changes:
    * Removed defaultBasePackages configuration option as well as the
      functionality for loading recipes from the filesystem based
      on configuration.
    * Reworked recipe loading to make the code more understandable.
    * Implemented autoLoadRecipes configuration option. (CNY-2694)

  o Protocol Changes:
    * The commitCheck() xmlrpc API call has been added that will check
      commit permissions for a trovelist before having to send the 
      changeset for commit (CNY-2683)

Changes in 2.0.14:
  o Bug Fixes:
    * A bug causing python-setuptools to incorrectly appear to be an
      excessive build requirement has been fixed. (CNY-2738)
    * A bug in which python-setuptools was sometimes incorrectly not
      recognized as being needed in buildRequires has been fixed. (CNY-2772)
    * A regression has been fixed that caused rMake to abort when recursing
      through a group recipe that added troves with full versions. (CNY-2768)
    * When reporting possibly excessive buildRequires, not mentioning
      buildRequires at all in the recipe caused Conary to report the
      immediate superclass's buildRequires as the recipe's buildRequires.
      This bug has been resolved. (CNY-2769)
    * A bug that caused the --context flag to not be recognized when
      specified before a command has been fixed. (CNY-2770)
    * A bug that caused buildRequires calculation in TagSpec to be slow has
      been fixed. (CNY-2773)

Changes in 2.0.13:
  o Build Changes:
    * When cooked, factories can now package additional files in their
     :recipe component. (CNY-2748)
    * Moved VersionConflicts to pluggable policy and removed default
      exceptions. (CNY-2716)

  o Client Changes:
    * PGP Keyring location is no longer determined using $HOME, which
      is unreliable; a getpwuid(3) lookup is used instead. (CNY-2722)
    * The number of retries for providing a passphrase when signing